--- a/back-end/package.json
+++ b/back-end/package.json
@@ -23,7 +23,8 @@
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "twilio": "^5.3.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
