--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,8 +14,11 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
+    "csurf": "^1.10.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "express-validator": "^7.2.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
@@ -26,7 +29,8 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "qrcode": "^1.5.4",
-    "twilio": "^5.3.7"
+    "twilio": "^5.3.7",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
