--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
+    "compression": "^1.7.5",
     "cors": "^2.8.5",
     "csurf": "^1.10.0",
     "dotenv": "^16.4.7",
